# crmonban

./: .gitignore  Cargo.toml  README.md  config.toml  test_daemon.sh
benches/: benchmark_results.csv  benchmark_results_O.csv  matrix_benchmark.rs  pcap_benchmark.rs
data/: benchmark_results.csv  benchmark_results_full.csv  dpi_rules.toml
data/abuse/: badips.txt
data/emergingthreats/: ips.txt
data/firehol/: level1.txt
data/http_detect/: attack_patterns.json  test_urls.txt
data/spamhaus/: blocklist.txt
data/tor/: exit_nodes.txt
dbus/: org.crmonban.Daemon.conf
display/backend/: Cargo.toml
display/backend/src/: api.rs  ipc_handler.rs  main.rs  models.rs  remote_aggregator.rs  state.rs
display/backend/src/handlers/: anomaly.rs  bans.rs  events.rs  flows.rs  geo.rs  incidents.rs  metrics.rs  mod.rs  overview.rs  protocols.rs  remote.rs  scans.rs  signatures.rs  system.rs  websocket.rs
display/frontend/: index.html  package.json  tailwind.config.js  vite.config.js
display/frontend/src/: App.vue  router.js
docs/: PLAN-01-SURICATA-RULES.md  PLAN-06-ML-DETECTION.md  PLAN-10-ACTIVE-DEFENSE.md  PLAN-COMPLETE-NIDS.md  PLAN-NIDS-ENHANCEMENT.md  PLAN-PRODUCT-TIERS.md  SCAN_DETECTION_DESIGN.md  nginx-cloudflare-setup.md
rules/: infostealer-december2025.rules  local-bruteforce.rules  local-cicids2017.rules  local-scan.rules
src/: brute_force.rs  cli.rs  cloudflare.rs  config.rs  database.rs  dbus.rs  dpi.rs  ebpf.rs  firewall.rs  intel.rs  journald_monitor.rs  lib.rs  main.rs  malware_detect.rs  models.rs  monitor.rs  port_scan_monitor.rs  scan_detect_legacy.rs  shared_whitelist.rs  siem.rs  tls_proxy.rs  zones.rs
src/audit/: mod.rs
src/core/: analysis.rs  event.rs  flow.rs  layers.rs  mod.rs  packet.rs  parser.rs
src/correlation/: aggregator.rs  chains.rs  incident.rs  mod.rs  rules.rs
src/database/: batched_writer.rs  mod.rs
src/dos/: mod.rs  syn_flood.rs
src/engine/: actions.rs  capture.rs  flow_buffer.rs  mod.rs  pipeline.rs  profiling.rs  workers.rs
src/feedback/: adjuster.rs  analyzer.rs  correlation.rs  daemon.rs  log_parsers.rs  mod.rs
src/flow/: mod.rs  table.rs  tracker.rs
src/http_detect/: detection_rules.rs  mod.rs  packet_processor.rs
src/ipc/: client.rs  display.rs  messages.rs  mod.rs  server.rs
src/ipfilter/: mod.rs
src/ipfilter/engine/: mod.rs  worker.rs
src/ipfilter/filter/: geoip.rs  ipfilter.rs  mod.rs
src/layer234/: aggregator.rs  config.rs  detector.rs  error.rs  features.rs  l2_state.rs  mod.rs  output.rs  parser.rs  protocols.rs  session.rs  store.rs  tls.rs  types.rs  weights.rs
src/layer234/extra234/: bgp.rs  discovery.rs  dot1x.rs  mod.rs  routing.rs  stp.rs  tunnel.rs
src/layer234/extra34/: fragmentation.rs  icmp_attacks.rs  mod.rs  spoofing.rs  tcp_attacks.rs
src/llm/: analyzer.rs  cache.rs  config.rs  mod.rs  privacy.rs  queue.rs
src/llm/prompts/: alert_triage.rs  attack_chain.rs  mitre_map.rs  mod.rs  threat_explain.rs
src/llm/provider/: anthropic.rs  llamacpp.rs  mod.rs  ollama.rs  openai.rs
src/llm/rag/: loader.rs  mod.rs  retriever.rs  vectorstore.rs
src/ml/: anomaly.rs  baseline.rs  features.rs  mod.rs  storage.rs  training.rs
src/ml/models/: isolation_forest.rs  mod.rs  statistical.rs
src/ml/online/: feedback.rs  incremental.rs  mod.rs  replay_buffer.rs
src/ml/unified/: fusion.rs  mapping.rs  mod.rs  normalization.rs
src/network/: cli.rs  config.rs  mod.rs
src/network/scan/: burp.rs  ettercap.rs  metasploit.rs  mod.rs  nmap.rs  runner.rs
src/network/scan_commercial/: acunetix.rs  mod.rs  nessus.rs
src/parallel/: mod.rs
src/protocols/: alerts.rs  detector.rs  mod.rs  registry.rs  rules.rs  traits.rs  types.rs
src/protocols/dcerpc/: match_.rs  mod.rs  state.rs  types.rs
src/protocols/dhcp/: match_.rs  mod.rs  state.rs  types.rs
src/protocols/dnp3/: match_.rs  mod.rs  state.rs  types.rs
src/protocols/dns/: match_.rs  mod.rs  parser.rs  state.rs  types.rs
src/protocols/enip/: match_.rs  mod.rs  state.rs  types.rs
src/protocols/ftp/: match_.rs  mod.rs  state.rs  types.rs
src/protocols/http/: match_.rs  mod.rs  parser.rs  state.rs  types.rs
src/protocols/ike/: match_.rs  mod.rs  state.rs  types.rs
src/protocols/kerberos/: match_.rs  mod.rs  state.rs  types.rs
src/protocols/modbus/: match_.rs  mod.rs  state.rs  types.rs
src/protocols/mqtt/: match_.rs  mod.rs  state.rs  types.rs
src/protocols/nfs/: match_.rs  mod.rs  state.rs  types.rs
src/protocols/ntp/: match_.rs  mod.rs  state.rs  types.rs
src/protocols/rdp/: match_.rs  mod.rs  state.rs  types.rs
src/protocols/rfb/: match_.rs  mod.rs  state.rs  types.rs
src/protocols/sip/: match_.rs  mod.rs  state.rs  types.rs
src/protocols/smb/: match_.rs  mod.rs  parser.rs  state.rs  types.rs
src/protocols/smtp/: analyzer.rs  match_.rs  mod.rs  parser.rs  state.rs  types.rs
src/scan_detect/: behavior.rs  config.rs  engine.rs  mod.rs
src/signatures/: ast.rs  hyperscan.rs  loader.rs  matcher.rs  mod.rs  parser.rs  storage.rs
src/testing/: benchmark.rs  feedback.rs  ground_truth.rs  metrics.rs  mod.rs  realistic.rs  report.rs  synthetic.rs
src/threat_intel/: cache.rs  ioc.rs  mod.rs
src/types/: analysis.rs  event.rs  flow.rs  mod.rs  packet.rs  pipeline.rs  protocols.rs
src/wasm/: mod.rs  plugin.rs  registry.rs  types.rs
src/wireless/: capture.rs  interface.rs  mod.rs  radiotap.rs  state.rs
support/firewall-viz/: Cargo.toml  install.sh
systemd/: crmonban.service
test/: Dockerfile.iperf  Dockerfile.netperf  README.md  benchmark.sh  compare_benchmark.sh  docker-compose.yml  ssl_benchmark.sh
test/results/: comparison_20251206_095025.txt  comparison_20251206_095128.txt  comparison_20251206_095248.txt  comparison_20251206_095516.txt  comparison_20251206_100652.txt  comparison_20251206_101303.txt
test/ssl_certs/: server.crt  server.key
tests/attack/: Cargo.toml
tests/attack/src/: generator.rs  main.rs  recorder.rs  signatures.rs  state_machine.rs
tests/attack/src/attacks/: brute_force.rs  dns_attacks.rs  fuzzer.rs  mod.rs  port_scan.rs  syn_flood.rs  web_attacks.rs
(+76 files in other folders)
