[package]
name = "crmonban"
version = "0.1.0"
edition = "2024"
authors = ["svvs"]
description = "nftables-based intrusion prevention system with attacker intelligence gathering"
license = "MIT"
repository = "https://github.com/greenpdx/crmonban"
keywords = ["firewall", "nftables", "security", "intrusion-prevention", "fail2ban"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# nftables JSON API
nftables = { git = "https://github.com/nftables-rs/nftables-rs" }

# CLI
clap = { version = "*", features = ["derive", "env"] }

# Async runtime
tokio = { version = "*", features = ["full"] }

# File watching
notify = "*"
notify-debouncer-mini = "*"

# Pattern matching
regex = { version = "*", features = ["std"] }

# Signature engine dependencies (optional)
nom = { version = "*", optional = true }
aho-corasick = { version = "*", optional = true }
parking_lot = { version = "*", optional = true }

# Flow tracking and protocol analysis dependencies (optional)
md5 = { version = "*", optional = true }

# Threat intelligence dependencies (optional)
bincode = { version = "1", optional = true }
async-trait = { version = "*", optional = true }

# ML/Anomaly detection dependencies (optional)
rand = { version = "*", optional = true }

# Correlation and packet engine dependencies (optional)
crossbeam-channel = { version = "*", optional = true }
num_cpus = { version = "*", optional = true }

# Database
rusqlite = { version = "*", features = ["bundled"] }

# Serialization
serde = { version = "*", features = ["derive"] }
serde_json = "*"
toml = "*"

# HTTP client for intel gathering
reqwest = { version = "*", features = ["json"] }

# Date/time
chrono = { version = "*", features = ["serde"] }

# Directory paths
dirs-next = "*"

# Unix utilities
libc = "*"

# Logging
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }

# Error handling
thiserror = "*"
anyhow = "*"

# IP address handling
ipnetwork = { version = "*", features = ["serde"] }

# DNS lookups
trust-dns-resolver = "*"

# Async utilities
futures = "*"

# PID file and daemon
daemonize = "*"

# D-Bus integration
zbus = "*"

# SIEM export
uuid = { version = "*", features = ["v4"] }
hostname = "*"

# Zone config parsing
serde_yaml = "*"

# Pretty tables for CLI output
tabled = "*"
colored = "*"

# NFQUEUE for deep packet inspection
nfq = "*"

# Packet parsing
etherparse = "*"

# TLS/SSL for MITM proxy
tokio-rustls = "*"
rustls = "*"
rustls-pemfile = "*"
rcgen = "*"
webpki-roots = "*"
x509-parser = "*"
time = "*"
pem = "*"

[[bin]]
name = "crmonban"
path = "src/main.rs"

[[bin]]
name = "matrix_benchmark"
path = "benches/matrix_benchmark.rs"

[lib]
name = "crmonban"
path = "src/lib.rs"

[features]
default = []
# External firewall integration (requires separate firewall daemon)
crrouter = []
# Signature-based detection (Suricata/Snort rule compatibility)
signatures = ["dep:nom", "dep:aho-corasick", "dep:parking_lot"]
# Flow tracking for ML/anomaly detection (Stage 2)
flow-tracking = ["dep:parking_lot"]
# Protocol analyzers with JA3 fingerprinting (Stage 3)
protocols = ["dep:md5"]
# Threat intelligence feeds (Stage 5)
threat-intel = ["dep:bincode", "dep:async-trait", "dep:parking_lot"]
# ML/Anomaly detection (Stage 6)
ml-detection = ["dep:rand", "dep:bincode", "dep:parking_lot", "flow-tracking"]
# Alert Correlation (Stage 7)
correlation = ["dep:parking_lot", "flow-tracking"]
# Packet Engine (Stage 8)
packet-engine = ["dep:crossbeam-channel", "dep:num_cpus", "dep:parking_lot", "correlation"]
# Full NIDS functionality (all stages)
nids = ["signatures", "flow-tracking", "protocols", "threat-intel", "ml-detection", "correlation", "packet-engine"]

# Network Scanning - Free/Open Source (Nmap, Ettercap, Metasploit, Burp)
scan = []
# Network Scanning - Commercial (Nessus, Acunetix) - only when explicitly requested
scan-commercial = ["scan"]
