[package]
name = "crmonban"
version = "0.1.0"
edition = "2024"
authors = ["svvs"]
description = "nftables-based intrusion prevention system with attacker intelligence gathering"
license = "MIT"
repository = "https://github.com/greenpdx/crmonban"
keywords = ["firewall", "nftables", "security", "intrusion-prevention", "fail2ban"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# Vector similarity database for layer234 detection
crvecdb = "0.1"

# nftables JSON API
nftables = { version = "0.6.4", registry = "kellnr" }

# CLI
clap = { version = "*", features = ["derive", "env"] }

# Async runtime
tokio = { version = "*", features = ["full"] }

# File watching
notify = "*"
notify-debouncer-mini = "*"

# Pattern matching
regex = { version = "*", features = ["std"] }
aho-corasick = "1.1"

# Concurrent data structures
dashmap = "5.5"
smallvec = "1.11"

# Signature engine dependencies (optional)
nom = { version = "*", optional = true }
parking_lot = { version = "*", optional = true }

# Hyperscan high-performance regex matching (optional)
# Requires libhyperscan-dev on Debian/Ubuntu: apt install libhyperscan-dev
hyperscan = { version = "0.3", optional = true }

# Flow tracking and protocol analysis dependencies (optional)
md5 = { version = "*", optional = true }

# Threat intelligence dependencies (optional)
bincode = { version = "2", optional = true, features = ["serde"] }
async-trait = { version = "*", optional = true }

# ML/Anomaly detection dependencies (optional)
rand = { version = "*", optional = true }

# Advanced ML dependencies (optional) - neural networks, gradient boosting
burn = { version = "0.16", default-features = false, features = ["ndarray", "autodiff", "train"], optional = true }
burn-ndarray = { version = "0.16", optional = true }
ordered-float = { version = "4.2", optional = true }

# LLM integration dependencies (optional) - local-first AI analysis
tiktoken-rs = { version = "0.5", optional = true }
base64 = { version = "0.22", optional = true }

# Correlation and packet engine dependencies (optional)
crossbeam-channel = { version = "*", optional = true }
num_cpus = { version = "*", optional = true }

# Parallel processing
rayon = { version = "1.10", optional = true }

# Database
rusqlite = { version = "*", features = ["bundled"] }

# Serialization
serde = { version = "*", features = ["derive"] }
serde_json = "*"
toml = "*"

# HTTP client for intel gathering
reqwest = { version = "*", features = ["json"] }

# Date/time
chrono = { version = "*", features = ["serde"] }

# Directory paths
dirs-next = "*"

# Unix utilities
libc = "*"
nix = { version = "0.30", features = ["signal"] }

# Logging
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }

# Error handling
thiserror = "*"
anyhow = "*"

# IP address handling
ipnetwork = { version = "*", features = ["serde"] }

# GeoIP database
maxminddb = "0.24"

# DNS lookups
trust-dns-resolver = "*"

# PID file and daemon
daemonize = "*"

# D-Bus integration (optional)
zbus = { version = "*", optional = true }

# SIEM export
uuid = { version = "*", features = ["v4", "serde"] }
hostname = "*"

# Pretty tables for CLI output
tabled = "*"
colored = "*"

# NFQUEUE for deep packet inspection
nfq = "*"
ctrlc = "3.4"

# Email alerts
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder"] }

# Utilities
dotenvy = "0.15"
hex = "0.4"
gethostname = "0.5"

# Packet parsing
etherparse = "*"
pcap = "*"
pcap-file = "2.0"

# Profiling/Benchmarking (optional for profiling feature)
hdrhistogram = { version = "*", optional = true }

# Wireless 802.11 support (optional for wireless feature)
neli = { version = "0.6", optional = true }
neli-wifi = { version = "0.6", optional = true }

# TLS/SSL for MITM proxy
tokio-rustls = "*"
rustls = "*"
rustls-pemfile = "*"
rcgen = "*"
webpki-roots = "*"
x509-parser = "*"
time = "*"
pem = "*"
pnet = "0.35.0"

[[bin]]
name = "crmonban"
path = "src/main.rs"

[[bin]]
name = "pcap_replay"
path = "src/bin/pcap_replay.rs"

[[bin]]
name = "validate_patterns"
path = "src/bin/validate_patterns.rs"

[[bin]]
name = "validate_nginx_logs"
path = "src/bin/validate_nginx_logs.rs"

[[bin]]
name = "layer234_pcap"
path = "src/bin/layer234_pcap.rs"

[[bin]]
name = "layer234_nfqueue"
path = "src/bin/layer234_nfqueue.rs"

[lib]
name = "crmonban"
path = "src/lib.rs"

[features]
default = ["nids", "all-protocols"]

# D-Bus integration for daemon control
dbus = ["dep:zbus"]
# External firewall integration (requires separate firewall daemon)
crrouter = []
# Signature-based detection (Suricata/Snort rule compatibility)
signatures = ["dep:nom", "dep:parking_lot"]
# Hyperscan acceleration for signature matching (10-50x faster)
hyperscan = ["signatures", "dep:hyperscan"]
# Flow tracking for ML/anomaly detection (Stage 2)
flow-tracking = ["dep:parking_lot"]
# Protocol analyzers with JA3 fingerprinting (Stage 3)
protocols = ["dep:md5", "dep:async-trait"]
# Threat intelligence feeds (Stage 5)
threat-intel = ["dep:bincode", "dep:async-trait", "dep:parking_lot"]
# ML/Anomaly detection (Stage 6)
ml-detection = ["dep:rand", "dep:bincode", "dep:parking_lot", "flow-tracking"]
# Advanced ML models (autoencoder, LSTM, ensemble) - requires burn neural network framework
ml-advanced = ["ml-detection", "dep:burn", "dep:burn-ndarray", "dep:ordered-float"]
# LLM integration for alert triage and threat analysis (local-first with Ollama/llama.cpp)
llm = ["dep:tiktoken-rs", "dep:base64", "dep:async-trait"]
# LLM with cloud provider fallback (OpenAI, Anthropic) - requires llm feature
llm-cloud = ["llm"]
# Alert Correlation (Stage 7)
correlation = ["dep:parking_lot", "flow-tracking"]
# Packet Engine (Stage 8)
packet-engine = ["dep:crossbeam-channel", "dep:num_cpus", "dep:parking_lot", "correlation"]
# Parallel processing
parallel = ["dep:rayon", "dep:num_cpus"]
# Pipeline profiling with histograms (p50/p95/p99 latencies, throughput)
profiling = ["dep:hdrhistogram", "dep:parking_lot"]
# Full NIDS functionality (all stages)
nids = ["signatures", "flow-tracking", "protocols", "threat-intel", "ml-detection", "correlation", "packet-engine", "parallel", "profiling"]

# Network Scanning - Free/Open Source (Nmap, Ettercap, Metasploit, Burp)
scan = []
# Network Scanning - Commercial (Nessus, Acunetix) - only when explicitly requested
scan-commercial = ["scan"]

# ═══════════════════════════════════════════════════════════════════════════════
# Protocol Features - Each protocol can be individually enabled/disabled
# ═══════════════════════════════════════════════════════════════════════════════

# All protocols enabled by default
all-protocols = [
    "proto-http",
    "proto-dns",
    "proto-tls",
    "proto-ssh",
    "proto-smtp",
    "proto-smb",
    "proto-dcerpc",
    "proto-ftp",
    "proto-nfs",
    "proto-kerberos",
    "proto-rdp",
    "proto-dhcp",
    "proto-snmp",
    "proto-sip",
    "proto-mqtt",
    "proto-modbus",
    "proto-dnp3",
    "proto-tftp",
    "proto-ntp",
    "proto-enip",
    "proto-rfb",
    "proto-ike",
]

# ICS/SCADA protocol group
ics-protocols = ["proto-modbus", "proto-dnp3", "proto-enip"]

# Individual protocol features
proto-http = []
proto-dns = []
proto-tls = []
proto-ssh = []
proto-smtp = []
proto-smb = []
proto-dcerpc = []
proto-ftp = []
proto-nfs = []
proto-kerberos = []
proto-rdp = []
proto-dhcp = []
proto-snmp = []
proto-sip = []
proto-mqtt = []
proto-modbus = []
proto-dnp3 = []
proto-tftp = []
proto-ntp = []
proto-enip = []
proto-rfb = []
proto-ike = []

# ═══════════════════════════════════════════════════════════════════════════════
# Layer 2-4 Infrastructure Attack Detection (extra234)
# ═══════════════════════════════════════════════════════════════════════════════
# Extends layer234 module with detection for:
# - BGP hijacking (AS path anomalies, prefix hijacking)
# - STP root bridge attacks (priority manipulation, TC floods)
# - CDP/LLDP spoofing (fake device announcements)
# - OSPF/RIP injection (route poisoning, DR manipulation)
# - GRE/VXLAN tunnel detection (unauthorized encapsulation)
# - 802.1X bypass (hub bypass, rogue authenticator)
extra234 = []

# ═══════════════════════════════════════════════════════════════════════════════
# Layer 3-4 Advanced Attack Detection (extra34)
# ═══════════════════════════════════════════════════════════════════════════════
# Extends layer234 module with detection for:
# - IP fragmentation attacks (Teardrop, Ping of Death, fragment floods)
# - IP spoofing (bogon/martian addresses, configurable private ranges)
# - ICMP attacks (redirect, source quench)
# - TCP attacks (RST injection, session hijacking, SYN-ACK reflection)
# - Land attack (src == dst)
extra34 = []

# ═══════════════════════════════════════════════════════════════════════════════
# 802.11 Wireless Attack Detection (wireless)
# ═══════════════════════════════════════════════════════════════════════════════
# Adds wireless-specific attack detection with monitor mode support:
# - Deauth/disassoc floods
# - Evil twin AP detection
# - Beacon/probe floods
# - WPA handshake capture detection
# - KRACK attack detection
# - Karma attack detection
wireless = ["dep:neli", "dep:neli-wifi"]

[dev-dependencies]
tempfile = "*"

[profile.release]
# Link-Time Optimization - optimizes across crate boundaries
lto = true
# Single codegen unit for better optimization
codegen-units = 1
# Optimize for size (use "s" for less aggressive, "z" for smallest)
opt-level = "s"
# Strip debug symbols
strip = true
# Abort on panic (no unwinding overhead)
panic = "abort"

[profile.release-small]
inherits = "release"
opt-level = "z"
