[package]
name = "crmonban-display"
version = "0.1.0"
edition = "2021"

[dependencies]
# Main crmonban library for IPC types
crmonban = { path = "../.." }

# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "compression-gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures-util = "0.3"

# Real-time updates
tokio-stream = { version = "0.1", features = ["sync"] }

# Hostname detection
hostname = "0.4"
